@@ -1,4 +1,0 @@
-{
-  "directory": "components",
-  "json": "bower.json"
-}
