@@ -1,0 +1,20 @@
+# Contributing
+
+All projects under the Pylons Projects, including this one, follow the guidelines established at [How to Contribute](http://www.pylonsproject.org/community/how-to-contribute) and [Coding Style and Standards](http://docs.pylonsproject.org/en/latest/community/codestyle.html).
+
+You can contribute to this project in several ways.
+
+- [File an Issue on GitHub](https://github.com/Pylons/trypyramid.com/issues)
+- Fork this project and create a branch with your suggested change. When ready, submit a pull request for consideration. [GitHub Flow](https://guides.github.com/introduction/flow/index.html) describes the workflow process and why it's a good practice. When submitting a pull request, sign [CONTRIBUTORS.md](https://github.com/Pylons/trypyramid.com/blob/master/CONTRIBUTORS.md) if you have not yet done so.
+- Join the IRC channel #pyramid on irc.freenode.net.
+
+## Git Branches
+
+Git branches and their purpose and status at the time of this writing are listed below.
+
+- [master](https://github.com/Pylons/trypyramid.com/) - The branch which should always be *deployable*. The default branch on GitHub.
+- For development, create a new branch. If changes on your new branch are accepted, they will be merged into the master branch and deployed.
+
+## Prerequisites
+
+Follow the instructions in [README.md](https://github.com/Pylons/trypyramid.com) to install the tools needed to run the project.
