@@ -1,3 +1,1 @@
-The pylons_sphinx_theme is supplied under the Creative Commons
-Attribution-Noncommercial-Share Alike 3.0 United States License as described by
-http://creativecommons.org/licenses/by-nc-sa/3.0/us/
+See CONTRIBUTORS.txt for licensing terms and exceptions.
