@@ -1,2 +1,0 @@
-include *.txt *.rst *.md *.cfg
-recursive-include src/pyramid_sphinx_themes *
