@@ -1,12 +1,0 @@
-{
-  "name": "pyramid-sphinx-themes-resources",
-  "version": "0.1.0",
-  "dependencies": {
-    "jquery": "1.11.1",
-    "bootstrap": "3.3.1",
-    "html5shiv": "3.7.2",
-    "respond": "1.4.2",
-    "underscore": "1.7.0",
-    "font-awesome": "4.2.0"
-  }
-}
