@@ -1,7 +1,9 @@
 {
   "name": "pyramid-sphinx-themes",
-  "version": "0.1.0",
   "description": "Pyramid Sphinx Themes",
+  "version": "0.1.0",
+  "author": "Blaise Laflamme, the Pylons Project Community",
+  "license": "BSD-Derived"
   "engines": [
     "node"
   ],
@@ -9,21 +11,39 @@
     "type": "git",
     "url": "https://github.com/Pylons/pyramid-sphinx-themes"
   },
+  "scripts": {
+    "build": "rm -Rf build/*; webpack -d --colors --progress",
+    "dist": "rm -Rf dist/*; webpack -p --colors --progress --config webpack.dist.config.js",
+    "dev": "webpack-dev-server --progress --colors --content-base build"
+  },
   "dependencies": {
-    "bower": "*",
-    "gulp": "*"
+    "animate.css": "^3.4.0",
+    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6",
+    "font-awesome": "^4.5.0",
+    "highlight.js": "^9.0.0",
+    "jquery": "^2.1.4"
   },
   "devDependencies": {
-    "gulp-util": "*",
-    "gulp-concat": "*",
-    "gulp-sourcemaps": "*",
-    "gulp-cssmin": "*",
-    "gulp-jshint": "*",
-    "gulp-less": "*",
-    "gulp-load-plugins": "*",
-    "gulp-uglify": "*",
-    "gulp-watch": "*"
-    },
-  "author": "Blaise Laflamme, the Pylons Project Community",
-  "license": "BSD-Derived"
+    "babel-core": "^6.3.26",
+    "babel-loader": "^6.2.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^0.9.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.0",
+    "imports-loader": "^0.6.5",
+    "node-sass": "^3.4.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "3.1.2",
+    "scripts-loader": "^0.1.3",
+    "style-loader": "^0.13.0",
+    "swig-webpack-plugin": "^0.5.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-notifier": "^1.2.1",
+    "webpack-stats-plugin": "0.1.1"
+  }
 }
