@@ -1,5 +1,0 @@
-Jinja2==2.7.3
-MarkupSafe==0.23
-Pygments==2.0.1
-Sphinx==1.2.3
-docutils==0.12
