@@ -1,2 +1,0 @@
-[easy_install]
-zip_ok = false
