@@ -1,6 +1,8 @@
 Upcoming
 ========
 
+- Use trypyramid.com tooling and design as base.
+
 
 0.0 (2013-09-07)
 ================
